# typst-relescope

./: .typstignore  README.md  build.sh  typst.toml
examples/: example-pick.typ  example-scope.typ
src/: .typstignore  wrap.typ
src/relescope-rs/: Cargo.toml
src/relescope-rs/src/: langs.rs  lib.rs
src/relescope-rs/src/langs/: python.rs  rust.rs
tests/: test.py  test.typ
